<resources>
    <string name="app_name">LAB_WEEK_01</string>
    <string name="name_hint">Insert your name</string>
    <string name="nim_hint">Insert your NIM</string>
    <string name="name_value">...</string>
    <string name="nim_value">...</string>
    <string name="button_name_value">Submit</string>
    <string name="name_greet">My name is: </string>
    <string name="nim_greet">My Student is: </string>
    <string name="field_empty">Field is empty!</string>
    <string name="nim_error">Student number has to be 11 digits long!</string>
</resources>